fix: align all links of cards in a line

--- a/styles.css
+++ b/styles.css
@@ -247,7 +247,15 @@ i:hover {
     margin: 10px 0;
 }
 
-
+.card__description {
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    align-self: center;
+    margin: 10px 0;
+    height: 100px ;
+    padding-bottom: 20px ;
+}
 
 .card__links {
     display: flex;
